force-app/main/default/objects/Project_Task_Submission__c/Project_Task_Submission__c.object-meta.xml
<CustomObject>
    <label>Project Task Submission</label>
    <nameField>
        <displayFormat>PTS-{00000}</displayFormat>
        <label>Project Task Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>