force-app/main/default/objects/Project_Task_Submission__c/fields/Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Approver_Type__c</fullName>
    <description>Who needs to approve the submission?</description>
    <inlineHelpText>Who needs to approve the submission?</inlineHelpText>
    <label>Approver Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>