force-app/main/default/objects/Project_Task_Submission__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Any comments related to the submission.</description>
    <inlineHelpText>Any comments related to the submission.</inlineHelpText>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>