force-app/main/default/objects/Project_Task_Submission__c/fields/Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolved__c</fullName>
    <description>Date the Submission was resolved.</description>
    <inlineHelpText>Date the Submission was resolved.</inlineHelpText>
    <label>Date Resolved</label>
    <type>Date</type>
</CustomField>