force-app/main/default/objects/Project_Task_Submission__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>Date the request, approval or rejection was submitted.</description>
    <inlineHelpText>Date the request, approval or rejection was submitted.</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>