force-app/main/default/objects/Project_Task_Submission__c/fields/Previous_Project_Task_Submission__c.field-meta.xml
<CustomField>
    <fullName>Previous_Project_Task_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What was the submission prior to this submission?</description>
    <inlineHelpText>What was the submission prior to this submission?</inlineHelpText>
    <label>Previous Project Task Submission</label>
    <referenceTo>Project_Task_Submission__c</referenceTo>
    <relationshipName>Project_Task_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>