force-app/main/default/objects/Project_Task_Submission__c/fields/Prior_Project_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Project_Task_Status__c</fullName>
    <description>Project Task Status at time of submission.</description>
    <inlineHelpText>Project Task Status at time of submission.</inlineHelpText>
    <label>Prior Project Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>