force-app/main/default/objects/Project_Task_Submission__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <label>Project Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Project Task Submissions</relationshipLabel>
    <relationshipName>Project_Task_Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>