force-app/main/default/objects/Project_Task_Submission__c/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <label>Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task is Reviewed</fullName>
                <default>true</default>
                <label>Task is Reviewed</label>
            </value>
            <value>
                <fullName>Project Manager Submits for Client Approval</fullName>
            </value>
            <value>
                <fullName>Client Approves Pending</fullName>
            </value>
            <value>
                <fullName>Developer Assigned to Pending</fullName>
            </value>
            <value>
                <fullName>Developer Working</fullName>
            </value>
            <value>
                <fullName>Developer Completes Work/Testing</fullName>
            </value>
            <value>
                <fullName>Developer Submits for Approval to Project Manager</fullName>
            </value>
            <value>
                <fullName>Project Manager Reviews and QA&apos;s Developer Work</fullName>
            </value>
            <value>
                <fullName>Project Manager Submits for Client Review</fullName>
            </value>
            <value>
                <fullName>Client Reviews and QA&apos;s for Completion</fullName>
            </value>
            <value>
                <fullName>Client Approves Completion</fullName>
            </value>
            <value>
                <fullName>Project Task Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>