force-app/main/default/objects/Project_Task_Submission__c/fields/Submission_Step__c.field-meta.xml
<CustomField>
    <fullName>Submission_Step__c</fullName>
    <description>The step of the submission.</description>
    <inlineHelpText>The step of the submission.</inlineHelpText>
    <label>Submission Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>