force-app/main/default/objects/Project_Task_Submission__c/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <description>Type of Approval Process Submission</description>
    <inlineHelpText>Type of Approval Process Submission</inlineHelpText>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>