force-app/main/default/objects/Project_Task_Submission__c/fields/Submitter_Contact__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Task Submissions</relationshipLabel>
    <relationshipName>Project_Task_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>