force-app/main/default/objects/Project_Task_Submission__c/fields/Submitting_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Submitting_User_Role__c</fullName>
    <description>The role of the User/Contact that submitted the request</description>
    <inlineHelpText>The role of the User/Contact that submitted the request</inlineHelpText>
    <label>Submitting User Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>